Prevent beatmap difficulty dots overflow

--- a/resources/assets/less/bem/beatmapset-panel.less
+++ b/resources/assets/less/bem/beatmapset-panel.less
@@ -100,6 +100,10 @@
     }
   }
 
+  &__beatmap-count {
+    font-weight: 600;
+  }
+
   &__beatmap-dot {
     margin-right: 1px;
     width: 6px;
@@ -119,13 +123,6 @@
   &__beatmap-icon {
     margin-right: 2px;
     font-size: 14px; // icon size
-  }
-
-  &__beatmap-more {
-    font-weight: 600;
-    // Manual adjustment so it looks centered. The result is kind of different between Chromium and Firefox.
-    bottom: 2px;
-    position: relative;
   }
 
   &__beatmaps-all {
